[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/attacks/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/attacks/DeathBall.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/attacks/deathball/normal_map.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/attacks/deathball/sprite.png" type="Texture" id=4]



[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "spawn_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "damager"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="DeathBall" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 35
sleeping = true
script = ExtResource( 2 )
projectile_speed = 145
damage = 6

[node name="Texture" parent="." index="0"]
modulate = Color( 100, 100, 100, 1 )
texture = ExtResource( 4 )
normal_map = ExtResource( 3 )
hframes = 6
frame = 5

[node name="Hitbox" parent="." index="1"]
shape = SubResource( 1 )
disabled = true

[node name="Animation" parent="." index="3"]
autoplay = "spawn_in"
anims/idle = SubResource( 2 )
anims/spawn_in = SubResource( 3 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="." index="4"]
anims/damager = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_DeathBall_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
